Styling changes to make about, directions page, and footer, look cleaner and have a mobile view. Also fixed contact page text error message not showing

--- a/src/css/aboutpage.css
+++ b/src/css/aboutpage.css
@@ -29,6 +29,8 @@
 
 .about .left .paragraph p {
     padding-bottom: 13px;
+    width: 90%;
+    margin: auto;
 }
 
 .about .right {
